<resources>
    <string name="app_name">Whac A Quokka Application</string>
    <string name="title_image">Title</string>
    <string name="background_image">Background</string>
    <string name="discover_button">Search a Quokka Player</string>
    <string name="advert_button">Wait a Wack Player</string>
    <string name="quit_button">Quit</string>
    <string name="hole_image">Hole and Quokka</string>
    <string name="quokka_image">Quokka</string>
    <string name="score_image">Score</string>
    <string name="spawn_image">Spawn</string>
    <string name="time_image">Time</string>
    <string name="end_game_title">The game has ended!</string>
    <string name="end_game_message_won">You won!</string>
    <string name="end_game_message_lost">You lost!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>