<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".QuokkaGameActivity">

    <!-- Score management -->
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/quokka_counter"
        android:breakStrategy="simple"
        android:singleLine="true"
        android:text="@string/score_image"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Time management -->
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/time_counter"
        android:breakStrategy="simple"
        android:singleLine="true"
        android:text="@string/time_image"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Quokkas -->
    <!-- First line of quokkas -->
    <ImageView
        android:id="@+id/hole_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toTopOf="@id/hole_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/hole_2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hole_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toTopOf="@id/hole_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hole_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toTopOf="@id/hole_6"
        app:layout_constraintLeft_toLeftOf="@id/hole_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Second line of quokkas -->
    <ImageView
        android:id="@+id/hole_4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/hole_5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hole_5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hole_6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/hole_5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Last line of quokkas -->
    <ImageView
        android:id="@+id/hole_7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/hole_8"
        app:layout_constraintTop_toBottomOf="@id/hole_4" />

    <ImageView
        android:id="@+id/hole_8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hole_5" />

    <ImageView
        android:id="@+id/hole_9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/quokka_image"
        android:scaleType="fitXY"
        android:src="@drawable/quokka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/hole_8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hole_6" />

    <!-- Buttons -->
    <ImageView
        android:id="@+id/quit_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/quit_button"
        android:src="@drawable/btn_quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>